@@ -2,7 +2,6 @@ requires "DBIx::Class::Core" => "0";
 requires "Ref::Util" => "0";
 requires "Safe::Isa" => "0";
 requires "Types::SQL::Util" => "v0.3.0";
-requires "namespace::autoclean" => "0";
 requires "perl" => "v5.8.0";
 requires "version" => "0";
 recommends "Ref::Util::XS" => "0";
