@@ -7,6 +7,8 @@ Revision history for {{ $dist->name }}:
   [Other]
   - Added DBIx::Class as an explicit prerequisite.
 
+  - Removed prereq on namespace::autoclean.
+
 v0.1.1    2018-11-18 12:01:40+00:00 Europe/London
   [Tests]
   - Added diagnostics for cpantesters.
